--- a/src/locales/lang/zh-CN/routes.json
+++ b/src/locales/lang/zh-CN/routes.json
@@ -3,6 +3,7 @@
     "form": "我的表单",
     "formv2": "表单V2",
     "my": "我的",
-    "table": "我的表格"
+    "table": "我的表格",
+    "table2": "我的表格2"
   }
 }
