--- a/src/locales/lang/zh-CN/routes.json
+++ b/src/locales/lang/zh-CN/routes.json
@@ -4,6 +4,7 @@
     "formv2": "表单V2",
     "my": "我的",
     "table": "我的表格",
-    "table2": "我的表格2"
+    "table2": "我的表格2",
+    "test": "测试"
   }
 }
